--- a/src/sass/partials/_footer.sass
+++ b/src/sass/partials/_footer.sass
@@ -1,5 +1,5 @@
 .footer
-	padding-top: 5.7rem
+	@include section-space-top
 	background: #fff
 	@include desk
 		position: relative
@@ -47,7 +47,7 @@
 
 		&__email
 			padding-top: 3.4rem
-			font-size: 1.48rem
+			font-size: 1.3rem
 			@include desk
 				display: inline-flex
 				justify-content: flex-end
